# multisig-wallet

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/ic_web3_copy/: Cargo.toml
src/ic_web3_copy/src/: lib.rs
src/ic_web3_copy/src/contract/res/: token.json
src/multisig_wallet_backend/: Cargo.toml  main.mo
src/multisig_wallet_frontend/src/: index.html  index.js
