[package]
name = "ic_web3_copy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.8"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
ic-web3 = { git = "https://github.com/rocklabs-io/ic-web3" }
ic-cdk-macros = "0.6.10"
serde_json = "1.0.97"
hex = "0.4.3"
